--- a/openssl.cnf
+++ b/openssl.cnf
@@ -128,7 +128,7 @@ emailAddress		= optional
 
 ####################################################################
 [ req ]
-default_bits		= 2048
+default_bits		= 4096
 default_md		= sha256
 default_keyfile 	= privkey.pem
 distinguished_name	= req_distinguished_name
@@ -164,7 +164,7 @@ localityName			= Locality Name (eg, city)
 localityName_default		= ZhuHai
 
 0.organizationName		= Organization Name (eg, company)
-0.organizationName_default	= Zhuhai Unitech Power Technology Company Ltd.
+0.organizationName_default	= Keji
 
 # we can do this but it is not needed normally :-)
 #1.organizationName		= Second Organization Name (eg, company)
